# n8n-workshop

./: .gitignore  LICENSE  README.md  pyproject.toml
guides/docker/: english.md  italiano.md
guides/download/: english.md  italiano.md
guides/email/: english.md  italiano.md
guides/intro/: english.md  italiano.md
guides/rss/: english.md  italiano.md
guides/server/: english.md  italiano.md
mermaid/english/: workflow.basic.mermaid  workflow.email.mermaid  workflow.monitoring.mermaid  workflow.rss.mermaid  workflow1.mermaid  workflow2-webhook.mermaid  workflow2.mermaid  workflow3.mermaid  workflow4.mermaid  workflow5.mermaid  workflow6.mermaid  workflow7.mermaid  workflow8.mermaid
mermaid/italiano/: workflow.basic.mermaid  workflow.email.mermaid  workflow.monitoring.mermaid  workflow.rss.mermaid  workflow1.mermaid  workflow2-webhook.mermaid  workflow2.mermaid  workflow3.mermaid  workflow4.mermaid  workflow5.mermaid  workflow6.mermaid  workflow7.mermaid  workflow8.mermaid
scripts/adepts/invitations/: .env.example  README.md  invite_users.py
scripts/adepts/workflows/: .env.example  README.md  import_workflows.py
scripts/docker_installer/: .env.sample  Dockerfile  docker-compose.yml  english.md  italiano.md  n8n-installer.ps1  n8n-installer.sh  n8n-task-runners.json  troubleshoot.ps1  troubleshoot.sh
scripts/telegram_bot/: english.md  italiano.md  troubleshoot.ps1  troubleshoot.sh
scripts/workflow5/: process.py
scripts/workflow6/: monitor.py
