[project]
name = "n8n"
version = "0.1.0"

[dependency-groups]
dev = [
  "bump-my-version",
  "git-cliff",
  "pyright",
  "pytest",
  "ruff",
]

# ---------------------------------------------------------------------------
# bumpversion
# ---------------------------------------------------------------------------
[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

# ---------------------------------------------------------------------------
# git-cliff
# ---------------------------------------------------------------------------
[tool.git-cliff.remote.github]
owner = "bilardi"
repo = "n8n-workshop"

[tool.git-cliff.changelog]
header = "# Changelog\n\nAll notable changes to this project will be documented in this file.\n\nThe format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/), and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).\n\n"
body = """
{% if version %}\
## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
{% else %}\
## [Unreleased]
{% endif %}\
{% for group, commits in commits | group_by(attribute="group") %}\
### {{ group }}
{% for commit in commits %}\
- {{ commit.message | upper_first }}
{% endfor %}
{% endfor %}\
"""
footer = """
{% for release in releases %}\
{% if release.version %}\
{% if release.previous is defined and release.previous.version is defined %}\
[{{ release.version | trim_start_matches(pat="v") }}]: https://github.com/{{ remote.github.owner }}/{{ remote.github.repo }}/compare/{{ release.previous.version }}...{{ release.version }}
{% else %}\
[{{ release.version | trim_start_matches(pat="v") }}]: https://github.com/{{ remote.github.owner }}/{{ remote.github.repo }}/releases/tag/{{ release.version }}
{% endif %}\
{% else %}\
{% if release.previous is defined and release.previous.version is defined %}\
[Unreleased]: https://github.com/{{ remote.github.owner }}/{{ remote.github.repo }}/compare/{{ release.previous.version }}...HEAD
{% endif %}\
{% endif %}\
{% endfor %}
"""
trim = true
render_always = false
skip_if_empty = true

[tool.git-cliff.git]
conventional_commits = true
filter_unconventional = true
tag_pattern = "v[0-9].*"
sort_commits = "oldest"
split_commits = false

[[tool.git-cliff.git.commit_parsers]]
message = "^feat"
group = "Features"

[[tool.git-cliff.git.commit_parsers]]
message = "^fix"
group = "Bug Fixes"

[[tool.git-cliff.git.commit_parsers]]
message = "^refactor|^perf"
group = "Performance"

[[tool.git-cliff.git.commit_parsers]]
message = "^docs"
group = "Documentation"

[[tool.git-cliff.git.commit_parsers]]
message = "^test"
group = "Test"

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------

[tool.ruff]
exclude = [".venv", "guides"]
include = ["scripts/**/*.py"]
fix = true
line-length = 100
output-format = "grouped"
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812", # missing trailing comma # conflict with formatter
  "D203", # incorrect-blank-line-before-class
  "D213", # multi-line-summary-second-line
  "D413", # Missing blank line after last section ("Args", "Returns")
  "D415", # First line should end with a period, question mark, or exclamation point
  "EXE002", # The file is executable but no shebang is present
  "FBT", # positional argument in function definition or call
  "ISC001", # implicit string concatenation # conflict with formatter
  # for CLI scripts
  "BLE001", # do not catch blind exception
  "D103", # missing docstring in public function
  "D212", # multi-line docstring summary should start at the first line
  "DTZ005", # datetime.now() called without a tz argument
  "E501", # line too long
  "EXE001", # shebang is present but file is not executable
  "PERF401", # use list.extend to create a transformed list
  "PLW1510", # subprocess.run without explicit check argument
  "PTH100", # os.path.abspath() should be replaced by Path.resolve()
  "PTH103", # os.makedirs() should be replaced by Path.mkdir()
  "PTH107", # os.remove() should be replaced by Path.unlink()
  "PTH112", # os.path.isdir() should be replaced by Path.is_dir()
  "PTH113", # os.path.isfile() should be replaced by Path.is_file()
  "PTH118", # os.path.join() should be replaced by Path with / operator
  "PTH120", # os.path.dirname() should be replaced by Path.parent
  "PTH123", # open() should be replaced by Path.open()
  "S108", # probable insecure usage of temporary file or directory
  "S110", # try-except-pass detected
  "S310", # audit URL open for permitted schemes
  "S603", # subprocess call: check for execution of untrusted input
  "S607", # starting a process with a partial executable path
  "SIM105", # use contextlib.suppress instead of try-except-pass
  "T201", # print found
  "TRY300", # consider moving this statement to an else block
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"] # Missing docstring in public package
"tests/**" = [
  "ANN", # Missing return / type annotation for public function
  "S101" # Use of `assert` detected
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100
indent-style = "space"
line-ending = "auto"
quote-style = "double"

[tool.ruff.lint.mccabe]
max-complexity = 10

# ---------------------------------------------------------------------------
# pyright
# ---------------------------------------------------------------------------

[tool.pyright]
exclude = ["**/__pycache__"]
include = ["scripts"]
pythonVersion = "3.13"
reportMissingTypeStubs = false
typeCheckingMode = "strict"

